--- a/package.json
+++ b/package.json
@@ -50,5 +50,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:4000"
+  "homepage": "http://tomatoPJkanri.github.io/albatross"
 }
