--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -50,5 +51,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://tomatoPJkanri.github.io/albatross"
+  "homepage": "https://tomatopjkanri.github.io/albatross/"
 }
